minor naming updates